tests/specs/ecosystem/bradenmacdonald/quantity_math_js/1_2_1.test
bradenmacdonald/quantity-math-js/1.2.1
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
 --> /units.ts:5:14
  | 
5 | export const prefixes = Object.freeze(
  |              ^^^^^^^^ this symbol is missing an explicit type
  | 
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /units.ts:80:14
   | 
80 | export const builtInUnits = Object.freeze(
   |              ^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


